--- a/index.html
+++ b/index.html
@@ -54,29 +54,33 @@
             <div class="offers">
                 <p class="offers__header">Специальные предложения</p>
                 <div class="offers__previews">
-                    <div class="offers__item">
-                        <img src="./img/chair.png" alt="кресло">
-                        <p class="offers_info">Парикмахерское кресло<br>«Норм» гидравлическое</p>
-                        <p class="offers__price">9 900 ₽</p>
-                        <a class="button button-info" href="#">Купить</a>
+                    <div class="offers__content-block">
+                        <div class="offers__item">
+                            <img src="./img/chair.png" alt="кресло">
+                            <p class="offers_info">Парикмахерское кресло<br>«Норм» гидравлическое</p>
+                            <p class="offers__price">9 900 ₽</p>
+                            <a class="button button-info" href="#">Купить</a>
+                        </div>
+                        <div class="offers__item">
+                            <img src="./img/chair.png" alt="кресло">
+                            <p class="offers_info">Парикмахерское кресло<br>«Норм» гидравлическое</p>
+                            <p class="offers__price">9 900 ₽</p>
+                            <a class="button button-info" href="#">Купить</a>
+                        </div>
                     </div>
-                    <div class="offers__item">
-                        <img src="./img/chair.png" alt="кресло">
-                        <p class="offers_info">Парикмахерское кресло<br>«Норм» гидравлическое</p>
-                        <p class="offers__price">9 900 ₽</p>
-                        <a class="button button-info" href="#">Купить</a>
-                    </div>
-                    <div class="offers__item">
-                        <img src="./img/chair.png" alt="кресло">
-                        <p class="offers_info">Парикмахерское кресло<br>«Норм» гидравлическое</p>
-                        <p class="offers__price">9 900 ₽</p>
-                        <a class="button button-info" href="#">Купить</a>
-                    </div>
-                    <div class="offers__item">
-                        <img src="./img/chair.png" alt="кресло">
-                        <p class="offers_info">Парикмахерское кресло<br>«Норм» гидравлическое</p>
-                        <p class="offers__price">9 900 ₽</p>
-                        <a class="button button-info" href="#">Купить</a>
+                    <div class="offers__content-block">
+                        <div class="offers__item">
+                            <img src="./img/chair.png" alt="кресло">
+                            <p class="offers_info">Парикмахерское кресло<br>«Норм» гидравлическое</p>
+                            <p class="offers__price">9 900 ₽</p>
+                            <a class="button button-info" href="#">Купить</a>
+                        </div>
+                        <div class="offers__item">
+                            <img src="./img/chair.png" alt="кресло">
+                            <p class="offers_info">Парикмахерское кресло<br>«Норм» гидравлическое</p>
+                            <p class="offers__price">9 900 ₽</p>
+                            <a class="button button-info" href="#">Купить</a>
+                        </div>
                     </div>
                 </div>
             </div>
