--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
 
     <body>
         <header class="header">
-            <nav>
+            <div class="header__wrapper">
                 <div class="header__menu">
-                    <div class="menu__list menu">
-                        <a class="menu__item menu__item_grey" href="#">Доставка</a>
-                        <a class="menu__item menu__item_grey" href="#">Оплата</a>
-                        <a class="menu__item menu__item_grey" href="#">Отзывы</a>
-                        <a class="menu__item menu__item_grey" href="#">Вопрос - ответ</a>
-                        <a class="menu__item menu__item_grey" href="#">Контакты</a>
+                    <nav id="menu" class="menu__body">
+                        <div class="menu__list menu">
+                            <a class="menu__item menu__item_grey" href="#">Доставка</a>
+                            <a class="menu__item menu__item_grey" href="#">Оплата</a>
+                            <a class="menu__item menu__item_grey" href="#">Отзывы</a>
+                            <a class="menu__item menu__item_grey" href="#">Вопрос - ответ</a>
+                            <a class="menu__item menu__item_grey" href="#">Контакты</a>
+                        </div>
+                    </nav>
+                    <a href="#menu" class="menu__icon"><span></span></a>
+                </div>
+                <div class="header__info">
+                    <div class="header__logo logo">
+                        <img class="logo__img" src="./img/logo.png" alt="логотип">
+                        <p class="logo__text">BEAUTY</p>
                     </div>
-                </div>
-            </nav>
-            <div class="header__info">
-                <div class="header__logo logo">
-                    <img class="logo__img" src="./img/logo.png" alt="логотип">
-                    <p class="logo__text">BEAUTY</p>
-                </div>
-                <div class="contact-telephone">
-                    <a class="telephone" href=tel:8(812)123-45-67>8 (812) 123-45-67</a>
-                    <a class="button button_call" href="#">Обратный звонок</a>
+                    <div class="contact-telephone">
+                        <a class="telephone" href=tel:8(812)123-45-67>8 (812) 123-45-67</a>
+                        <a class="button button_call" href="#">Обратный звонок</a>
+                    </div>
                 </div>
             </div>
         </header> 
