--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
 
     <body>
-        <header class="header">
-            <div class="header__wrapper">
+        <header id="menu" class="header">
+            <div id="close-menu" class="header__wrapper">
                 <div class="header__menu">
-                    <nav id="menu" class="menu__body">
+                    <nav class="menu__body">
                         <div class="menu__list menu">
                             <a class="menu__item menu__item_grey" href="#">Доставка</a>
                             <a class="menu__item menu__item_grey" href="#">Оплата</a>
@@ -21,7 +21,8 @@
                             <a class="menu__item menu__item_grey" href="#">Контакты</a>
                         </div>
                     </nav>
-                    <a href="#menu" class="menu__icon"><span></span></a>
+                    <a href="#menu" class="menu-icon menu-icon_open"><span></span></a>
+                    <a href="#close-menu" class="menu-icon menu-icon_close"></a>
                 </div>
                 <div class="header__info">
                     <div class="header__logo logo">
