--- a/index.html
+++ b/index.html
@@ -38,23 +38,27 @@
         </header> 
 
         <main class="main">
-            <div class="menu main__menu">
-                <a class="menu__item" href="#">Парикмахерская</a>
-                <a class="menu__item" href="#">Барбершоп</a>
-                <a class="menu__item" href="#">Маникюр</a>
-                <a class="menu__item" href="#">Педикюр</a>
-                <a class="menu__item" href="#">Массаж</a>
-                <a class="menu__item" href="#">Мебель</a>
-            </div>
+            <div class="intro__wrapper">
+                <div class="menu main__menu">
+                    <a class="menu__item" href="#">Парикмахерская</a>
+                    <a class="menu__item" href="#">Барбершоп</a>
+                    <a class="menu__item" href="#">Маникюр</a>
+                    <a class="menu__item" href="#">Педикюр</a>
+                    <a class="menu__item" href="#">Массаж</a>
+                    <a class="menu__item" href="#">Мебель</a>
+                </div>
 
-            <div class="main__intro">
-                <div class="main__info">
-                    <p class="main__header">Супер кресло</p>
-                    <p class="main__text">Текст акции всегда отражает суть, а не просто<br>
-                                            болтовню, поэтому внимательнее</p>
-                    <a class="button button-detaile" href="#">Подробнее</a>
+                <div class="main__intro">
+                    <div class="main__info">
+                        <p class="main__header">Супер кресло</p>
+                        <p class="main__text">Текст акции всегда отражает суть, а не просто<br>
+                                                болтовню, поэтому внимательнее</p>
+                        <a class="button button-detaile" href="#">Подробнее</a>
+                    </div>
                 </div>
             </div>
+
+                
             <div class="offers">
                 <p class="offers__header">Специальные предложения</p>
                 <div class="offers__previews">
